--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "tailwindcss": "^1.1.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-material-design-icons": "^4.4.0"
   },
   "devDependencies": {
     "@ianaya89/vue-cli-plugin-tailwind": "^1.0.2",
