--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.4.4",
     "tailwindcss": "^1.1.2",
     "vue": "^2.6.10",
-    "vue-material-design-icons": "^4.4.0"
+    "vue-material-design-icons": "^4.4.0",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@ianaya89/vue-cli-plugin-tailwind": "^1.0.2",
